# adkflow

./: .gitignore  .project-stats.txt  CLAUDE.md  INSTALLATION_FIX.md  PORT_FEATURE_SUMMARY.md  README.md  TESTING.md  adkflow  conftest.py  dev.sh  pyproject.toml  pytest.ini  setup-runner.sh  start-backend.sh  start-frontend.sh
.github/workflows/: test.yml
backend/: README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: execution_models.py  execution_routes.py  extension_routes.py  file_watcher.py  routes.py  run_manager.py
backend/src/api/routes/: __init__.py  chat_routes.py  context_preview_models.py  context_preview_routes.py  context_preview_service.py  debug_routes.py  file_routes.py  filesystem_routes.py  helpers.py  log_explorer_routes.py  manifest.py  models.py  project_routes.py  settings_routes.py  tab_routes.py  trace_explorer_routes.py
backend/src/models/: chat.py  workflow.py
backend/src/services/: __init__.py  chat_service.py  yaml_converter.py
backend/tests/: conftest.py
backend/tests/unit/: test_chat.py  test_chat_routes.py  test_chat_service.py  test_context_preview_routes.py  test_debug_routes.py  test_execution_routes.py  test_file_routes.py  test_file_watcher.py  test_filesystem_routes.py  test_log_explorer_routes.py  test_main.py  test_project_routes.py  test_run_manager.py  test_settings_routes.py  test_tab_routes.py  test_trace_explorer_routes.py
cli/: __init__.py  health.py  main.py  process_manager.py  servers.py  utils.py
cli/tests/unit/: test_health.py  test_main.py  test_process_manager.py  test_servers.py  test_utils.py
docs/: GETTING_STARTED.md  PORT_CONFIGURATION.md  PROJECT_MANAGEMENT.md  PROJECT_SUMMARY.md  README.md  VERTEX_AI_CHANGES.md  claude-flow-creation-guide.md  contributing.md
docs/custom-nodes/: README.md
docs/custom-nodes/examples/: README.md  __init__.py
docs/technical/: README.md  ai-chat-service.md  architecture.md  testing.md
docs/technical/backend/: README.md  logging.md  (+7 more)
docs/user-manual/: README.md  ai-chat-assistant.md  canvas.md  connections.md  getting-started.md  groups.md  interface-overview.md  keyboard-shortcuts.md  nodes.md  projects.md  prompts-and-contexts.md  running-workflows.md  tabs.md  teleporters.md  themes.md  troubleshooting.md  validation.md
examples/: sample-workflow.yaml  simple-workflow.yaml
extensions/api_client/: __init__.py  nodes.py
flow-runner/: .env.example  IMPLEMENTATION.md  QUICKSTART.md  README.md  VERTEX_AI.md  pyproject.toml
flow-runner/src/adkflow/: __init__.py  cli.py  executor.py  parser.py  tools.py  variable_resolver.py
frontend/: .gitignore  QUICKSTART.md  README.md  components.json  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: test-utils.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPropertiesPanel.tsx  CanvasContextMenu.tsx  ConfirmDialog.tsx  DebugDialog.tsx  DevModeBadge.tsx  DraggableHandle.tsx  DrawflowCanvas.tsx  EditorMenuBar.tsx  FilePicker.tsx  GlobalSearch.tsx  GroupDeleteDialog.tsx  HandleTooltip.tsx  HomeScreen.tsx  InlinePathPicker.tsx  LocationBadge.tsx  NodeContextMenu.tsx  PathPicker.tsx  ProjectDialog.tsx  ProjectSettingsDialog.tsx  ProjectSwitcher.tsx  PromptEditorModal.tsx  PromptNameDialog.tsx  ReactFlowCanvas.tsx  ReactFlowCanvas.types.ts  ReactFlowControls.tsx  ReactFlowDialogs.tsx  RecentProjectsList.tsx  ResizeHandle.tsx  RunConfirmDialog.tsx  RunPanel.tsx  SaveConfirmDialog.tsx  SettingsDialog.tsx  Tab.tsx  TabBar.tsx  TeleportNameDialog.tsx  Toolbar.tsx  TopMenubar.tsx  TopologyDialog.tsx  ValidationResultDialog.tsx
frontend/contexts/: CanvasActionsContext.tsx  ClipboardContext.tsx  ConnectionContext.tsx  FileSyncContext.tsx  ProjectContext.tsx  RunWorkflowContext.tsx  TabsContext.tsx  TeleporterContext.tsx  ThemeContext.tsx
frontend/hooks/: useFullscreen.ts  useLogExplorer.ts  useLoggingConfig.ts
frontend/lib/: aiPrompts.ts  api.ts  builtinNodeHelpers.ts  fileSave.ts  nodeHydration.ts  nodeMigration.ts  recentProjects.ts  searchUtils.ts  sessionStorage.ts  types.ts  utils.ts  variableExtractor.ts  workflowHelpers.ts
scanner/: README.md  __init__.py  agent.py  callbacks.py  cli.py  orchestrator.py  pyproject.toml
scanner/agents/: __init__.py  analysis.py  discovery.py
scanner/layout/: __init__.py  calculator.py
scanner/prompts/: analysis.prompt.md  discovery.prompt.md  generator.prompt.md
scanner/schemas/: __init__.py  models.py
scanner/tools/: README.md  __init__.py  analysis.py  codebase.py  interaction.py  output.py
schemas/: workflow-schema.md
scripts/: agents.md  generate_flow.py
scripts/generate_flow/: __init__.py  layout.py  models.py  node_builders.py  page_generator.py  parser.py  project_generator.py
tasks/: prd-product-requirements-document-callback-nodes-agent-callback-handles.md  prd.json
tests/: conftest.py
(+715 files in other folders)
