[project]
name = "adkflow"
version = "0.1.0"
description = "Visual workflow builder for Google ADK agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.121.3",
    "google-genai>=1.51.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
adkflow = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
