[project]
name = "adkflow"
version = "0.1.0"
description = "Visual workflow builder for Google ADK agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adkflow-runner",
    "click>=8.1.0",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
adkflow = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "backend"]

[tool.uv.workspace]
members = ["packages/adkflow-runner"]

[tool.uv.sources]
adkflow-runner = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "faker>=28.0.0",
]

[tool.pyright]
pythonVersion = "3.13"
include = ["cli", "backend/src", "packages/adkflow-runner/src"]
extraPaths = ["packages/adkflow-runner/src"]
typeCheckingMode = "standard"
